AdolaDEVMeta/force-app/main/default/objects/BisnodeConfig__c/BisnodeConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Bisnode Config</label>
</CustomObject>