AdolaDEVMeta/force-app/main/default/objects/BisnodeConfig__c/fields/End_Username__c.field-meta.xml
<CustomField>
    <fullName>End_Username__c</fullName>
    <label>End Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>