AdolaDEVMeta/force-app/main/default/objects/BisnodeConfig__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <label>Ticket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>